# instrumentum

./: .gitignore  LICENSE.md  README.md  pyproject.toml  test-logger.py
oxari/: __init__.py  digitalocean.py  do.py  fomatter.py  logger.py  logging.py  pdf.py  schemas.py  test.py
tests/: template.html  test_do.py  test_pdf.py
