[tool.poetry]
name = "instrumentum"
version = "1.0.0"
description = "Contains utility code shared across the oxari services"
authors = ["Olusanmi Hundogan <o.hundogan@gmail.com>"]
license = "Oxari B.V. License"
readme = "README.md"
packages = [
    {include = "oxari"}
]

[tool.poetry.dependencies]
python = "^3.8"
aws-requests-auth = "^0.4.3"
loguru = "^0.6.0, <1.0.0"
python-dotenv = "^1.0.0, <2.0.0"
pytest-order = "^1.1.0"
certifi = "^2024.07.04"


[tool.poetry.group.dev.dependencies]
yapf = "^0.32.0"
pylint = "^2.16.0"
fastapi = "^0.109.1"
pytest = "^7.3.1"
pytest-mock = "^3.10.0"
uvicorn = "^0.20.0"

[tool.poetry.extras]
uvicorn_support = ["uvicorn"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
